compiler-5-python-ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> function_declaration
Rule 6     declaration -> statement
Rule 7     var_declaration -> type IDENTIFIER SEMICOLON
Rule 8     var_declaration -> type IDENTIFIER ASSIGN expression SEMICOLON
Rule 9     type -> INT
Rule 10    type -> FLOAT
Rule 11    type -> CHAR
Rule 12    type -> VOID
Rule 13    function_declaration -> type IDENTIFIER LPAREN parameter_list RPAREN block
Rule 14    function_declaration -> type IDENTIFIER LPAREN RPAREN block
Rule 15    parameter_list -> parameter_list COMMA parameter
Rule 16    parameter_list -> parameter
Rule 17    parameter -> type IDENTIFIER
Rule 18    block -> LBRACE statement_list RBRACE
Rule 19    block -> LBRACE RBRACE
Rule 20    statement_list -> statement_list statement
Rule 21    statement_list -> statement
Rule 22    statement -> expression_statement
Rule 23    statement -> var_declaration
Rule 24    statement -> if_statement
Rule 25    statement -> while_statement
Rule 26    statement -> for_statement
Rule 27    statement -> return_statement
Rule 28    statement -> block
Rule 29    expression_statement -> expression SEMICOLON
Rule 30    expression_statement -> SEMICOLON
Rule 31    if_statement -> IF LPAREN expression RPAREN statement
Rule 32    if_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 33    while_statement -> WHILE LPAREN expression RPAREN statement
Rule 34    for_statement -> FOR LPAREN expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RPAREN statement
Rule 35    expression_opt -> expression
Rule 36    expression_opt -> empty
Rule 37    return_statement -> RETURN expression SEMICOLON
Rule 38    return_statement -> RETURN SEMICOLON
Rule 39    expression -> assignment_expression
Rule 40    assignment_expression -> IDENTIFIER ASSIGN assignment_expression
Rule 41    assignment_expression -> logical_or_expression
Rule 42    logical_or_expression -> logical_or_expression OR logical_and_expression
Rule 43    logical_or_expression -> logical_and_expression
Rule 44    logical_and_expression -> logical_and_expression AND equality_expression
Rule 45    logical_and_expression -> equality_expression
Rule 46    equality_expression -> equality_expression EQ relational_expression
Rule 47    equality_expression -> equality_expression NE relational_expression
Rule 48    equality_expression -> relational_expression
Rule 49    relational_expression -> relational_expression LT additive_expression
Rule 50    relational_expression -> relational_expression GT additive_expression
Rule 51    relational_expression -> relational_expression LE additive_expression
Rule 52    relational_expression -> relational_expression GE additive_expression
Rule 53    relational_expression -> additive_expression
Rule 54    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 55    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 56    additive_expression -> multiplicative_expression
Rule 57    multiplicative_expression -> multiplicative_expression MULTIPLY unary_expression
Rule 58    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 59    multiplicative_expression -> multiplicative_expression MODULO unary_expression
Rule 60    multiplicative_expression -> unary_expression
Rule 61    unary_expression -> MINUS unary_expression
Rule 62    unary_expression -> NOT unary_expression
Rule 63    unary_expression -> INCREMENT unary_expression
Rule 64    unary_expression -> DECREMENT unary_expression
Rule 65    unary_expression -> postfix_expression
Rule 66    postfix_expression -> primary_expression INCREMENT
Rule 67    postfix_expression -> primary_expression DECREMENT
Rule 68    postfix_expression -> primary_expression
Rule 69    primary_expression -> IDENTIFIER
Rule 70    primary_expression -> INTEGER_LITERAL
Rule 71    primary_expression -> FLOAT_LITERAL
Rule 72    primary_expression -> STRING_LITERAL
Rule 73    primary_expression -> CHAR_LITERAL
Rule 74    primary_expression -> LPAREN expression RPAREN
Rule 75    primary_expression -> function_call
Rule 76    function_call -> IDENTIFIER LPAREN argument_list RPAREN
Rule 77    function_call -> IDENTIFIER LPAREN RPAREN
Rule 78    argument_list -> argument_list COMMA expression
Rule 79    argument_list -> expression
Rule 80    empty -> <empty>

Terminals, with rules where they appear

AND                  : 44
ASSIGN               : 8 40
CHAR                 : 11
CHAR_LITERAL         : 73
COMMA                : 15 78
DECREMENT            : 64 67
DIVIDE               : 58
ELSE                 : 32
EQ                   : 46
FLOAT                : 10
FLOAT_LITERAL        : 71
FOR                  : 34
GE                   : 52
GT                   : 50
IDENTIFIER           : 7 8 13 14 17 40 69 76 77
IF                   : 31 32
INCREMENT            : 63 66
INT                  : 9
INTEGER_LITERAL      : 70
LBRACE               : 18 19
LBRACKET             : 
LE                   : 51
LPAREN               : 13 14 31 32 33 34 74 76 77
LT                   : 49
MINUS                : 55 61
MODULO               : 59
MULTIPLY             : 57
NE                   : 47
NOT                  : 62
OR                   : 42
PLUS                 : 54
RBRACE               : 18 19
RBRACKET             : 
RETURN               : 37 38
RPAREN               : 13 14 31 32 33 34 74 76 77
SEMICOLON            : 7 8 29 30 34 34 37 38
STRING_LITERAL       : 72
VOID                 : 12
WHILE                : 33
error                : 

Nonterminals, with rules where they appear

additive_expression  : 49 50 51 52 53 54 55
argument_list        : 76 78
assignment_expression : 39 40
block                : 13 14 28
declaration          : 2 3
declaration_list     : 1 2
empty                : 36
equality_expression  : 44 45 46 47
expression           : 8 29 31 32 33 35 37 74 78 79
expression_opt       : 34 34 34
expression_statement : 22
for_statement        : 26
function_call        : 75
function_declaration : 5
if_statement         : 24
logical_and_expression : 42 43 44
logical_or_expression : 41 42
multiplicative_expression : 54 55 56 57 58 59
parameter            : 15 16
parameter_list       : 13 15
postfix_expression   : 65
primary_expression   : 66 67 68
program              : 0
relational_expression : 46 47 48 49 50 51 52
return_statement     : 27
statement            : 6 20 21 31 32 32 33 34
statement_list       : 18 20
type                 : 7 8 13 14 17
unary_expression     : 57 58 59 60 61 62 63 64
var_declaration      : 4 23
while_statement      : 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . function_declaration
    (6) declaration -> . statement
    (7) var_declaration -> . type IDENTIFIER SEMICOLON
    (8) var_declaration -> . type IDENTIFIER ASSIGN expression SEMICOLON
    (13) function_declaration -> . type IDENTIFIER LPAREN parameter_list RPAREN block
    (14) function_declaration -> . type IDENTIFIER LPAREN RPAREN block
    (22) statement -> . expression_statement
    (23) statement -> . var_declaration
    (24) statement -> . if_statement
    (25) statement -> . while_statement
    (26) statement -> . for_statement
    (27) statement -> . return_statement
    (28) statement -> . block
    (9) type -> . INT
    (10) type -> . FLOAT
    (11) type -> . CHAR
    (12) type -> . VOID
    (29) expression_statement -> . expression SEMICOLON
    (30) expression_statement -> . SEMICOLON
    (31) if_statement -> . IF LPAREN expression RPAREN statement
    (32) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (33) while_statement -> . WHILE LPAREN expression RPAREN statement
    (34) for_statement -> . FOR LPAREN expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RPAREN statement
    (37) return_statement -> . RETURN expression SEMICOLON
    (38) return_statement -> . RETURN SEMICOLON
    (18) block -> . LBRACE statement_list RBRACE
    (19) block -> . LBRACE RBRACE
    (39) expression -> . assignment_expression
    (40) assignment_expression -> . IDENTIFIER ASSIGN assignment_expression
    (41) assignment_expression -> . logical_or_expression
    (42) logical_or_expression -> . logical_or_expression OR logical_and_expression
    (43) logical_or_expression -> . logical_and_expression
    (44) logical_and_expression -> . logical_and_expression AND equality_expression
    (45) logical_and_expression -> . equality_expression
    (46) equality_expression -> . equality_expression EQ relational_expression
    (47) equality_expression -> . equality_expression NE relational_expression
    (48) equality_expression -> . relational_expression
    (49) relational_expression -> . relational_expression LT additive_expression
    (50) relational_expression -> . relational_expression GT additive_expression
    (51) relational_expression -> . relational_expression LE additive_expression
    (52) relational_expression -> . relational_expression GE additive_expression
    (53) relational_expression -> . additive_expression
    (54) additive_expression -> . additive_expression PLUS multiplicative_expression
    (55) additive_expression -> . additive_expression MINUS multiplicative_expression
    (56) additive_expression -> . multiplicative_expression
    (57) multiplicative_expression -> . multiplicative_expression MULTIPLY unary_expression
    (58) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (59) multiplicative_expression -> . multiplicative_expression MODULO unary_expression
    (60) multiplicative_expression -> . unary_expression
    (61) unary_expression -> . MINUS unary_expression
    (62) unary_expression -> . NOT unary_expression
    (63) unary_expression -> . INCREMENT unary_expression
    (64) unary_expression -> . DECREMENT unary_expression
    (65) unary_expression -> . postfix_expression
    (66) postfix_expression -> . primary_expression INCREMENT
    (67) postfix_expression -> . primary_expression DECREMENT
    (68) postfix_expression -> . primary_expression
    (69) primary_expression -> . IDENTIFIER
    (70) primary_expression -> . INTEGER_LITERAL
    (71) primary_expression -> . FLOAT_LITERAL
    (72) primary_expression -> . STRING_LITERAL
    (73) primary_expression -> . CHAR_LITERAL
    (74) primary_expression -> . LPAREN expression RPAREN
    (75) primary_expression -> . function_call
    (76) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (77) function_call -> . IDENTIFIER LPAREN RPAREN

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20
    VOID            shift and go to state 21
    SEMICOLON       shift and go to state 9
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    RETURN          shift and go to state 25
    LBRACE          shift and go to state 26
    IDENTIFIER      shift and go to state 8
    MINUS           shift and go to state 34
    NOT             shift and go to state 36
    INCREMENT       shift and go to state 37
    DECREMENT       shift and go to state 38
    INTEGER_LITERAL shift and go to state 41
    FLOAT_LITERAL   shift and go to state 42
    STRING_LITERAL  shift and go to state 43
    CHAR_LITERAL    shift and go to state 44
    LPAREN          shift and go to state 11

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    function_declaration           shift and go to state 5
    statement                      shift and go to state 6
    type                           shift and go to state 7
    expression                     shift and go to state 10
    block                          shift and go to state 12
    expression_statement           shift and go to state 13
    if_statement                   shift and go to state 14
    while_statement                shift and go to state 15
    for_statement                  shift and go to state 16
    return_statement               shift and go to state 17
    assignment_expression          shift and go to state 27
    logical_or_expression          shift and go to state 28
    logical_and_expression         shift and go to state 29
    equality_expression            shift and go to state 30
    relational_expression          shift and go to state 31
    additive_expression            shift and go to state 32
    multiplicative_expression      shift and go to state 33
    unary_expression               shift and go to state 35
    postfix_expression             shift and go to state 39
    primary_expression             shift and go to state 40
    function_call                  shift and go to state 45

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . function_declaration
    (6) declaration -> . statement
    (7) var_declaration -> . type IDENTIFIER SEMICOLON
    (8) var_declaration -> . type IDENTIFIER ASSIGN expression SEMICOLON
    (13) function_declaration -> . type IDENTIFIER LPAREN parameter_list RPAREN block
    (14) function_declaration -> . type IDENTIFIER LPAREN RPAREN block
    (22) statement -> . expression_statement
    (23) statement -> . var_declaration
    (24) statement -> . if_statement
    (25) statement -> . while_statement
    (26) statement -> . for_statement
    (27) statement -> . return_statement
    (28) statement -> . block
    (9) type -> . INT
    (10) type -> . FLOAT
    (11) type -> . CHAR
    (12) type -> . VOID
    (29) expression_statement -> . expression SEMICOLON
    (30) expression_statement -> . SEMICOLON
    (31) if_statement -> . IF LPAREN expression RPAREN statement
    (32) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (33) while_statement -> . WHILE LPAREN expression RPAREN statement
    (34) for_statement -> . FOR LPAREN expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RPAREN statement
    (37) return_statement -> . RETURN expression SEMICOLON
    (38) return_statement -> . RETURN SEMICOLON
    (18) block -> . LBRACE statement_list RBRACE
    (19) block -> . LBRACE RBRACE
    (39) expression -> . assignment_expression
    (40) assignment_expression -> . IDENTIFIER ASSIGN assignment_expression
    (41) assignment_expression -> . logical_or_expression
    (42) logical_or_expression -> . logical_or_expression OR logical_and_expression
    (43) logical_or_expression -> . logical_and_expression
    (44) logical_and_expression -> . logical_and_expression AND equality_expression
    (45) logical_and_expression -> . equality_expression
    (46) equality_expression -> . equality_expression EQ relational_expression
    (47) equality_expression -> . equality_expression NE relational_expression
    (48) equality_expression -> . relational_expression
    (49) relational_expression -> . relational_expression LT additive_expression
    (50) relational_expression -> . relational_expression GT additive_expression
    (51) relational_expression -> . relational_expression LE additive_expression
    (52) relational_expression -> . relational_expression GE additive_expression
    (53) relational_expression -> . additive_expression
    (54) additive_expression -> . additive_expression PLUS multiplicative_expression
    (55) additive_expression -> . additive_expression MINUS multiplicative_expression
    (56) additive_expression -> . multiplicative_expression
    (57) multiplicative_expression -> . multiplicative_expression MULTIPLY unary_expression
    (58) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (59) multiplicative_expression -> . multiplicative_expression MODULO unary_expression
    (60) multiplicative_expression -> . unary_expression
    (61) unary_expression -> . MINUS unary_expression
    (62) unary_expression -> . NOT unary_expression
    (63) unary_expression -> . INCREMENT unary_expression
    (64) unary_expression -> . DECREMENT unary_expression
    (65) unary_expression -> . postfix_expression
    (66) postfix_expression -> . primary_expression INCREMENT
    (67) postfix_expression -> . primary_expression DECREMENT
    (68) postfix_expression -> . primary_expression
    (69) primary_expression -> . IDENTIFIER
    (70) primary_expression -> . INTEGER_LITERAL
    (71) primary_expression -> . FLOAT_LITERAL
    (72) primary_expression -> . STRING_LITERAL
    (73) primary_expression -> . CHAR_LITERAL
    (74) primary_expression -> . LPAREN expression RPAREN
    (75) primary_expression -> . function_call
    (76) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (77) function_call -> . IDENTIFIER LPAREN RPAREN

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20
    VOID            shift and go to state 21
    SEMICOLON       shift and go to state 9
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    RETURN          shift and go to state 25
    LBRACE          shift and go to state 26
    IDENTIFIER      shift and go to state 8
    MINUS           shift and go to state 34
    NOT             shift and go to state 36
    INCREMENT       shift and go to state 37
    DECREMENT       shift and go to state 38
    INTEGER_LITERAL shift and go to state 41
    FLOAT_LITERAL   shift and go to state 42
    STRING_LITERAL  shift and go to state 43
    CHAR_LITERAL    shift and go to state 44
    LPAREN          shift and go to state 11

    declaration                    shift and go to state 46
    var_declaration                shift and go to state 4
    function_declaration           shift and go to state 5
    statement                      shift and go to state 6
    type                           shift and go to state 7
    expression                     shift and go to state 10
    block                          shift and go to state 12
    expression_statement           shift and go to state 13
    if_statement                   shift and go to state 14
    while_statement                shift and go to state 15
    for_statement                  shift and go to state 16
    return_statement               shift and go to state 17
    assignment_expression          shift and go to state 27
    logical_or_expression          shift and go to state 28
    logical_and_expression         shift and go to state 29
    equality_expression            shift and go to state 30
    relational_expression          shift and go to state 31
    additive_expression            shift and go to state 32
    multiplicative_expression      shift and go to state 33
    unary_expression               shift and go to state 35
    postfix_expression             shift and go to state 39
    primary_expression             shift and go to state 40
    function_call                  shift and go to state 45

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    SEMICOLON       reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    RETURN          reduce using rule 3 (declaration_list -> declaration .)
    LBRACE          reduce using rule 3 (declaration_list -> declaration .)
    IDENTIFIER      reduce using rule 3 (declaration_list -> declaration .)
    MINUS           reduce using rule 3 (declaration_list -> declaration .)
    NOT             reduce using rule 3 (declaration_list -> declaration .)
    INCREMENT       reduce using rule 3 (declaration_list -> declaration .)
    DECREMENT       reduce using rule 3 (declaration_list -> declaration .)
    INTEGER_LITERAL reduce using rule 3 (declaration_list -> declaration .)
    FLOAT_LITERAL   reduce using rule 3 (declaration_list -> declaration .)
    STRING_LITERAL  reduce using rule 3 (declaration_list -> declaration .)
    CHAR_LITERAL    reduce using rule 3 (declaration_list -> declaration .)
    LPAREN          reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .
    (23) statement -> var_declaration .

  ! reduce/reduce conflict for INT resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for FLOAT resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for CHAR resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for VOID resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for IF resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for WHILE resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for FOR resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for RETURN resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for LBRACE resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for MINUS resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for NOT resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for INCREMENT resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for DECREMENT resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for INTEGER_LITERAL resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for FLOAT_LITERAL resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for STRING_LITERAL resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for CHAR_LITERAL resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for LPAREN resolved using rule 4 (declaration -> var_declaration .)
  ! reduce/reduce conflict for $end resolved using rule 4 (declaration -> var_declaration .)
    INT             reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    CHAR            reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    SEMICOLON       reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    RETURN          reduce using rule 4 (declaration -> var_declaration .)
    LBRACE          reduce using rule 4 (declaration -> var_declaration .)
    IDENTIFIER      reduce using rule 4 (declaration -> var_declaration .)
    MINUS           reduce using rule 4 (declaration -> var_declaration .)
    NOT             reduce using rule 4 (declaration -> var_declaration .)
    INCREMENT       reduce using rule 4 (declaration -> var_declaration .)
    DECREMENT       reduce using rule 4 (declaration -> var_declaration .)
    INTEGER_LITERAL reduce using rule 4 (declaration -> var_declaration .)
    FLOAT_LITERAL   reduce using rule 4 (declaration -> var_declaration .)
    STRING_LITERAL  reduce using rule 4 (declaration -> var_declaration .)
    CHAR_LITERAL    reduce using rule 4 (declaration -> var_declaration .)
    LPAREN          reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)

  ! INT             [ reduce using rule 23 (statement -> var_declaration .) ]
  ! FLOAT           [ reduce using rule 23 (statement -> var_declaration .) ]
  ! CHAR            [ reduce using rule 23 (statement -> var_declaration .) ]
  ! VOID            [ reduce using rule 23 (statement -> var_declaration .) ]
  ! SEMICOLON       [ reduce using rule 23 (statement -> var_declaration .) ]
  ! IF              [ reduce using rule 23 (statement -> var_declaration .) ]
  ! WHILE           [ reduce using rule 23 (statement -> var_declaration .) ]
  ! FOR             [ reduce using rule 23 (statement -> var_declaration .) ]
  ! RETURN          [ reduce using rule 23 (statement -> var_declaration .) ]
  ! LBRACE          [ reduce using rule 23 (statement -> var_declaration .) ]
  ! IDENTIFIER      [ reduce using rule 23 (statement -> var_declaration .) ]
  ! MINUS           [ reduce using rule 23 (statement -> var_declaration .) ]
  ! NOT             [ reduce using rule 23 (statement -> var_declaration .) ]
  ! INCREMENT       [ reduce using rule 23 (statement -> var_declaration .) ]
  ! DECREMENT       [ reduce using rule 23 (statement -> var_declaration .) ]
  ! INTEGER_LITERAL [ reduce using rule 23 (statement -> var_declaration .) ]
  ! FLOAT_LITERAL   [ reduce using rule 23 (statement -> var_declaration .) ]
  ! STRING_LITERAL  [ reduce using rule 23 (statement -> var_declaration .) ]
  ! CHAR_LITERAL    [ reduce using rule 23 (statement -> var_declaration .) ]
  ! LPAREN          [ reduce using rule 23 (statement -> var_declaration .) ]
  ! $end            [ reduce using rule 23 (statement -> var_declaration .) ]


state 5

    (5) declaration -> function_declaration .

    INT             reduce using rule 5 (declaration -> function_declaration .)
    FLOAT           reduce using rule 5 (declaration -> function_declaration .)
    CHAR            reduce using rule 5 (declaration -> function_declaration .)
    VOID            reduce using rule 5 (declaration -> function_declaration .)
    SEMICOLON       reduce using rule 5 (declaration -> function_declaration .)
    IF              reduce using rule 5 (declaration -> function_declaration .)
    WHILE           reduce using rule 5 (declaration -> function_declaration .)
    FOR             reduce using rule 5 (declaration -> function_declaration .)
    RETURN          reduce using rule 5 (declaration -> function_declaration .)
    LBRACE          reduce using rule 5 (declaration -> function_declaration .)
    IDENTIFIER      reduce using rule 5 (declaration -> function_declaration .)
    MINUS           reduce using rule 5 (declaration -> function_declaration .)
    NOT             reduce using rule 5 (declaration -> function_declaration .)
    INCREMENT       reduce using rule 5 (declaration -> function_declaration .)
    DECREMENT       reduce using rule 5 (declaration -> function_declaration .)
    INTEGER_LITERAL reduce using rule 5 (declaration -> function_declaration .)
    FLOAT_LITERAL   reduce using rule 5 (declaration -> function_declaration .)
    STRING_LITERAL  reduce using rule 5 (declaration -> function_declaration .)
    CHAR_LITERAL    reduce using rule 5 (declaration -> function_declaration .)
    LPAREN          reduce using rule 5 (declaration -> function_declaration .)
    $end            reduce using rule 5 (declaration -> function_declaration .)


state 6

    (6) declaration -> statement .

    INT             reduce using rule 6 (declaration -> statement .)
    FLOAT           reduce using rule 6 (declaration -> statement .)
    CHAR            reduce using rule 6 (declaration -> statement .)
    VOID            reduce using rule 6 (declaration -> statement .)
    SEMICOLON       reduce using rule 6 (declaration -> statement .)
    IF              reduce using rule 6 (declaration -> statement .)
    WHILE           reduce using rule 6 (declaration -> statement .)
    FOR             reduce using rule 6 (declaration -> statement .)
    RETURN          reduce using rule 6 (declaration -> statement .)
    LBRACE          reduce using rule 6 (declaration -> statement .)
    IDENTIFIER      reduce using rule 6 (declaration -> statement .)
    MINUS           reduce using rule 6 (declaration -> statement .)
    NOT             reduce using rule 6 (declaration -> statement .)
    INCREMENT       reduce using rule 6 (declaration -> statement .)
    DECREMENT       reduce using rule 6 (declaration -> statement .)
    INTEGER_LITERAL reduce using rule 6 (declaration -> statement .)
    FLOAT_LITERAL   reduce using rule 6 (declaration -> statement .)
    STRING_LITERAL  reduce using rule 6 (declaration -> statement .)
    CHAR_LITERAL    reduce using rule 6 (declaration -> statement .)
    LPAREN          reduce using rule 6 (declaration -> statement .)
    $end            reduce using rule 6 (declaration -> statement .)


state 7

    (7) var_declaration -> type . IDENTIFIER SEMICOLON
    (8) var_declaration -> type . IDENTIFIER ASSIGN expression SEMICOLON
    (13) function_declaration -> type . IDENTIFIER LPAREN parameter_list RPAREN block
    (14) function_declaration -> type . IDENTIFIER LPAREN RPAREN block

    IDENTIFIER      shift and go to state 47


state 8

    (40) assignment_expression -> IDENTIFIER . ASSIGN assignment_expression
    (69) primary_expression -> IDENTIFIER .
    (76) function_call -> IDENTIFIER . LPAREN argument_list RPAREN
    (77) function_call -> IDENTIFIER . LPAREN RPAREN

    ASSIGN          shift and go to state 48
    INCREMENT       reduce using rule 69 (primary_expression -> IDENTIFIER .)
    DECREMENT       reduce using rule 69 (primary_expression -> IDENTIFIER .)
    MULTIPLY        reduce using rule 69 (primary_expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 69 (primary_expression -> IDENTIFIER .)
    MODULO          reduce using rule 69 (primary_expression -> IDENTIFIER .)
    PLUS            reduce using rule 69 (primary_expression -> IDENTIFIER .)
    MINUS           reduce using rule 69 (primary_expression -> IDENTIFIER .)
    LT              reduce using rule 69 (primary_expression -> IDENTIFIER .)
    GT              reduce using rule 69 (primary_expression -> IDENTIFIER .)
    LE              reduce using rule 69 (primary_expression -> IDENTIFIER .)
    GE              reduce using rule 69 (primary_expression -> IDENTIFIER .)
    EQ              reduce using rule 69 (primary_expression -> IDENTIFIER .)
    NE              reduce using rule 69 (primary_expression -> IDENTIFIER .)
    AND             reduce using rule 69 (primary_expression -> IDENTIFIER .)
    OR              reduce using rule 69 (primary_expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 69 (primary_expression -> IDENTIFIER .)
    RPAREN          reduce using rule 69 (primary_expression -> IDENTIFIER .)
    COMMA           reduce using rule 69 (primary_expression -> IDENTIFIER .)
    LPAREN          shift and go to state 49


state 9

    (30) expression_statement -> SEMICOLON .

    INT             reduce using rule 30 (expression_statement -> SEMICOLON .)
    FLOAT           reduce using rule 30 (expression_statement -> SEMICOLON .)
    CHAR            reduce using rule 30 (expression_statement -> SEMICOLON .)
    VOID            reduce using rule 30 (expression_statement -> SEMICOLON .)
    SEMICOLON       reduce using rule 30 (expression_statement -> SEMICOLON .)
    IF              reduce using rule 30 (expression_statement -> SEMICOLON .)
    WHILE           reduce using rule 30 (expression_statement -> SEMICOLON .)
    FOR             reduce using rule 30 (expression_statement -> SEMICOLON .)
    RETURN          reduce using rule 30 (expression_statement -> SEMICOLON .)
    LBRACE          reduce using rule 30 (expression_statement -> SEMICOLON .)
    IDENTIFIER      reduce using rule 30 (expression_statement -> SEMICOLON .)
    MINUS           reduce using rule 30 (expression_statement -> SEMICOLON .)
    NOT             reduce using rule 30 (expression_statement -> SEMICOLON .)
    INCREMENT       reduce using rule 30 (expression_statement -> SEMICOLON .)
    DECREMENT       reduce using rule 30 (expression_statement -> SEMICOLON .)
    INTEGER_LITERAL reduce using rule 30 (expression_statement -> SEMICOLON .)
    FLOAT_LITERAL   reduce using rule 30 (expression_statement -> SEMICOLON .)
    STRING_LITERAL  reduce using rule 30 (expression_statement -> SEMICOLON .)
    CHAR_LITERAL    reduce using rule 30 (expression_statement -> SEMICOLON .)
    LPAREN          reduce using rule 30 (expression_statement -> SEMICOLON .)
    $end            reduce using rule 30 (expression_statement -> SEMICOLON .)
    RBRACE          reduce using rule 30 (expression_statement -> SEMICOLON .)
    ELSE            reduce using rule 30 (expression_statement -> SEMICOLON .)


state 10

    (29) expression_statement -> expression . SEMICOLON

    SEMICOLON       shift and go to state 50


state 11

    (74) primary_expression -> LPAREN . expression RPAREN
    (39) expression -> . assignment_expression
    (40) assignment_expression -> . IDENTIFIER ASSIGN assignment_expression
    (41) assignment_expression -> . logical_or_expression
    (42) logical_or_expression -> . logical_or_expression OR logical_and_expression
    (43) logical_or_expression -> . logical_and_expression
    (44) logical_and_expression -> . logical_and_expression AND equality_expression
    (45) logical_and_expression -> . equality_expression
    (46) equality_expression -> . equality_expression EQ relational_expression
    (47) equality_expression -> . equality_expression NE relational_expression
    (48) equality_expression -> . relational_expression
    (49) relational_expression -> . relational_expression LT additive_expression
    (50) relational_expression -> . relational_expression GT additive_expression
    (51) relational_expression -> . relational_expression LE additive_expression
    (52) relational_expression -> . relational_expression GE additive_expression
    (53) relational_expression -> . additive_expression
    (54) additive_expression -> . additive_expression PLUS multiplicative_expression
    (55) additive_expression -> . additive_expression MINUS multiplicative_expression
    (56) additive_expression -> . multiplicative_expression
    (57) multiplicative_expression -> . multiplicative_expression MULTIPLY unary_expression
    (58) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (59) multiplicative_expression -> . multiplicative_expression MODULO unary_expression
    (60) multiplicative_expression -> . unary_expression
    (61) unary_expression -> . MINUS unary_expression
    (62) unary_expression -> . NOT unary_expression
    (63) unary_expression -> . INCREMENT unary_expression
    (64) unary_expression -> . DECREMENT unary_expression
    (65) unary_expression -> . postfix_expression
    (66) postfix_expression -> . primary_expression INCREMENT
    (67) postfix_expression -> . primary_expression DECREMENT
    (68) postfix_expression -> . primary_expression
    (69) primary_expression -> . IDENTIFIER
    (70) primary_expression -> . INTEGER_LITERAL
    (71) primary_expression -> . FLOAT_LITERAL
    (72) primary_expression -> . STRING_LITERAL
    (73) primary_expression -> . CHAR_LITERAL
    (74) primary_expression -> . LPAREN expression RPAREN
    (75) primary_expression -> . function_call
    (76) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (77) function_call -> . IDENTIFIER LPAREN RPAREN

    IDENTIFIER      shift and go to state 8
    MINUS           shift and go to state 34
    NOT             shift and go to state 36
    INCREMENT       shift and go to state 37
    DECREMENT       shift and go to state 38
    INTEGER_LITERAL shift and go to state 41
    FLOAT_LITERAL   shift and go to state 42
    STRING_LITERAL  shift and go to state 43
    CHAR_LITERAL    shift and go to state 44
    LPAREN          shift and go to state 11
